-
Bug
-
Resolution: Done
-
P2: Important
-
5.4.0, 5.4.1
-
None
-
Windows 8.1 x64, Qt 5.4.0
-
db52d55fba61abf295de9f8430f60890cde58ee7
I noticed this when I created a simple dialog with a QOpenGLWidget that could be closed and re-opened anytime.
Everytime I closed the dialog it wouldn't free all the memory it had initially allocated.
So I decided to make a little test case here, which rapidly opens and closes such a dialog:
http://pastebin.com/a83pNgHb
Memory leak trace (see attachment) courtesy of a certain person on the IRC channel confirms it's not a system-specific thing.
The leaked elements seem to be mostly QPlatformTextureList
| For Gerrit Dashboard: QTBUG-45395 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 109950,2 | Avoid leaking the QPlatformTextureList | 5.5 | qt/qtbase | Status: MERGED | +2 | 0 |