Avoid leaking the QPlatformTextureList

Task-number: QTBUG-45395
Change-Id: I8fbdc5136d7d15b9c131d6b91186a1bf2645e4d4
Reviewed-by: Jørgen Lind <jorgen.lind@theqtcompany.com>

cregit: db52d55fba61abf295de9f8430f60890cde58ee7 https://github.com/qt/qtbase/commit/db52d55fba61abf295de9f8430f60890cde58ee7